[package]
name = "saucy"
version = "0.1.2"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"
description = "A helper tool for finding Python virtual environments."
repository = "https://github.com/dcchut/saucy"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
structopt = "0.3"
anyhow = "1.0"
dunce = "1.0"
